--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   		<button type="button" class="btn btn-primary index"><a href="banner.html">Banner</a></button><br>
   		<button type="button" class="btn btn-primary index"><a href="small-banner.html">Small Ban</a></button><br>
   		<button type="button" class="btn btn-primary index"><a href="comment.html">Comment</a></button><br>
-		</div>
+		<button type="button" class="btn btn-primary index"><a href="presdiv.html">Present</a></button><br>
+		</div>	
 		</div>
 		
 		<div class="ligne">
