--- a/presdiv.html
+++ b/presdiv.html
@@ -2,11 +2,56 @@
 <html>
     <head>
         <meta charset=“utf-8” />
-        <link rel="stylesheet" href="bootstrap.min-2.css">
+        <link rel="stylesheet" href="css/style.css">
         <title></title>
     </head>
   	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			  <a class="navbar-brand" href="index.html">Eventbrite</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+
+			  <div class="collapse navbar-collapse" id="navbarColor02">
+				<ul class="navbar-nav mr-auto">
+				  <li class="nav-item active">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Créer un évènement</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="event.html">Voir les évènements</a>
+				  </li>
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+				<button type="button" class="btn btn-primary btn-sm">Se connecter</button>
+				<pre> </pre>	
+				<button type="button" class="btn btn-primary btn-sm">S'enregistrer</button>
+				</form>
+			  </div>
+			</nav>
+	</header><br><br>
 		
+	<div class="container">
+		<div class="row row-grid justify-content-around align-items-center">
+			<div class="col-lg-6">
+		
+					 <img style="height: auto; width: 100%; display: block;" src="image/vishnu-r-nair-m1WZS5ye404-unsplash.jpg" alt="Card image">
+			
+			</div>
+			<div>	
+				<div class="col-lg-12">
+					<h2>TEXTE description image</h2>
+					
+				
+				</div>
+			</div>
+			
+		</div>
+	
+	</div>
 		
   	</body>
   
