--- a/banner.html
+++ b/banner.html
@@ -35,7 +35,7 @@
 			</nav>
 		</header>
 		
-		<div class="jumbotron">
+		<div class="jumbotron-banner">
   		<h1 class="display-3">EVENTBRITE</h1><br>
   		<p class="lead">Le site des fêtards de la France entière</p>
   		<p class="lead">Découvre dès maintenant les évènements à coté de chez toi</p>
